--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "scripts": {
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "docs:dev": "vuepress dev",
+    "docs:build": "vuepress build"
   },
   "devDependencies": {
-    "vuepress": "^0.9.0"
+    "vuepress": "^0.14.8"
   },
   "dependencies": {
     "vuetify": "^1.4.3"
